# bedotia

./: .gitignore  bedotia  bedotia.go  colors.go  devenv.nix  go.mod  go.sum  payload.go  prompt.fish  pyproject.toml  render.go  statusline.go
