[tool.poetry]
name = "bedotia"
version = "0.1.0"
description = "Python-enchanced fish theme for kitty"
authors = ["Erik Karsten <erik@opcode.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
